@@ -1,32 +1,25 @@
 require File.dirname(__FILE__) + '/../test_helper'
 
 class PackageTest < Test::Unit::TestCase
-  include ActiveMerchant::Shipping
-  
+ 
   GRAMS_IN_AN_OUNCE = 28.349523125
   OUNCES_IN_A_GRAM = 0.0352739619495804
   INCHES_IN_A_CM = 0.393700787401575
   CM_IN_AN_INCH = 2.54
   
   def setup
-      @imperial_package = Package.new(65, [3,6,8.5],
-                            :units => :imperial,
-                            :value => 10.65,
-                            :currency => 'USD'
-                          )
-                                          
-      @metric_package = Package.new(100, [5,18.5,40],
-                          :value => 860,
-                          :currency => 'CAD'
+    @imperial_package = Package.new(65, [3,6,8.5],
+                          :units => :imperial,
+                          :value => 10.65,
+                          :currency => 'USD'
                         )
-      
-      @packages = TestFixtures.packages
-  end
-
-  def test_initialize
-    assert_raise ArgumentError do
-      Package.new
-    end
+                                        
+    @metric_package = Package.new(100, [5,18.5,40],
+                        :value => 860,
+                        :currency => 'CAD'
+                      )
+    
+    @packages = TestFixtures.packages
   end
   
   def test_accessors
